kubernetes/apps/freshrss/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: apps
  labels:
    app.kubernetes.io/name: freshrss
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: freshrss
        image: freshrss/freshrss:1.30.1@sha256:48b63b9bc3d042a1301c32971b01af8841c7f059b452589c5bf77f475ba44c61
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 4
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /var/www/FreshRSS/data
        - name: extensions
          mountPath: /var/www/FreshRSS/extensions
        securityContext:
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: freshrss-data
      - name: extensions
        emptyDir: {}
