kubernetes/apps/freshrss/service.yml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: apps
  labels:
    app.kubernetes.io/name: freshrss
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: freshrss
