kubernetes/apps/freshrss/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: freshrss
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`rss.woitzik.dev`)
    kind: Rule
    middlewares: [{name: authelia}]
    services: [{name: freshrss, port: 80}]
  tls: {secretName: wildcard-woitzik-dev-tls}
